add chain query, remove data annotation, add indexes